      the rTorrent client supported said method. This will ensure that methods 
      aren't available if the client doesn't support it). You can use hasattr() 
      in order to avoid AttributeError being raised.

  - rtorrent.rpc.Method
    - added: is_available(). This function will check if the Method instance is 
             supported by the instance of RTorrent specified
    - renamed: class_name to _class
    - added: class_name, which is now just the name of the class, (_class.__name__)

v0.2.2 (November 12, 2011)
--------------------------
- TorrentParser now works with Python2 (Issue #2)
- Fixed a bug in which if dict keys within the torrent had spaces, those spaces would not be converted
  to underscores when parsing the torrent, making the instance variables inaccessible (TorrentParser)
- Fixed an issue in which creating a File instance would fail (Issue #3)

- API CHANGES
  - RTorrent
    - renamed: get_download_rate to get_down_limit
    - renamed: get_upload_rate to get_up_limit
    - renamed: set_download_limit to set_down_limit
    - renamed: set_upload_limit to set_up_limit

v0.2.1 (October 18, 2011)
-------------------------
- Added: short delay before verifying if torrent was loaded to give rTorrent a chance to actually load it
- Fixed: a bug that caused load_torrent() to not see that the torrent was added successfully (Issue #1)

v0.2.0 (October 07, 2011)
-------------------------
- Added: support for Peer rpc methods
- Added: update methods for Peer, Tracker, Torrent and File classes
- Added: int to boolean type casting on return values (only occurs if the Method's boolean flag is True)
- Added: poll method for RTorrent class
- Added: Multicall support (see rtorrent.rpc.Multicall)
- Added: minimum rTorrent version check

- Improvement: Completely rewrote how RPC methods are used

- Removed: list_to_dict function in rtorrent.common (no longer needed)

v0.1.0 (October 01, 2011)
-------------------------
- Intial release